--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -38,3 +38,17 @@ footer {
 .dice {
     font-size: 80px;
 }
+
+.diceCell {
+    display: inline-block;
+}
+
+.diceSel {
+    display: block;
+    margin: 0 auto;
+}
+
+.submit {
+    display: block;
+    margin-top: 2em;
+}
